# libupdate

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
libupdate/: CMakeLists.txt
libupdate/include/: update.h
libupdate/platform/: platform_errors.h  platform_fs.h  platform_process.h
libupdate/src/: http_transport.h  http_transport_socket.c  http_transport_winhttp.c  json_mini.c  json_mini.h  miniz_export.h  platform_fs.c  platform_fs_stub.c  platform_process.c  platform_process_stub.c  sha256.c  sha256.h  update.c  update_extract.c  update_html.c  update_html.h  update_ops.c  update_path.c  update_remote_check.c  update_remote_check.h
tests/: CMakeLists.txt  child_perform.c  test_apply.c  test_config.h.in  test_download.c  test_extract.c  test_helpers.c  test_helpers.h  test_log.h  test_main.c  test_merge_overlay.c  test_platform.c  test_release_notes.c  test_stress.c  test_update_init.c  test_updater.c  test_verify.c  update_test_access.h
tests/fixtures/: update.json
tests/mock_server/: http_serve.py  mk_minimal_zip.py  mk_slip_zip.py
updater/: CMakeLists.txt  main.c  update_state.c  update_state.h
